--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,15 +40,19 @@ jobs:
           scm-do-build-during-deployment: true
           enable-oryx-build: true
 
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Update App Settings
         uses: azure/appservice-settings@v1
         with:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
           mask-inputs: true
           app-settings-json: |
             [
               { "name": "DISCORD_WEBHOOK_URL", "value": "${{ secrets.DISCORD_WEBHOOK_URL }}", "slotSetting": false },
               { "name": "USER_MAPPING", "value": "${{ secrets.USER_MAPPING_JSON }}", "slotSetting": false }
             ]
-        env:
-          SCM_CREDENTIALS: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
