--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         uses: azure/appservice-settings@v1
         with:
           app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-          resource-group: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          resource-group: pydt-bot-rg
           mask-inputs: true
           app-settings-json: |
             [
