--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,19 +31,16 @@ jobs:
           pip install -r requirements.txt --target=".python_packages/lib/site-packages"
           popd
 
-      - name: Deploy to Azure Functions
-        uses: Azure/functions-action@v1
-        with:
-          app-name: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
-          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
-          scm-do-build-during-deployment: true
-          enable-oryx-build: true
-
       - name: Azure Login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Create deployment package
+        run: zip -r deploy.zip . -x '.git/*' -x '.github/*' -x '*.md' -x 'local.settings.json*'
+
+      - name: Deploy to Azure Functions
+        run: az functionapp deployment source config-zip --resource-group pydt-bot-rg --name ${{ secrets.AZURE_FUNCTIONAPP_NAME }} --src deploy.zip
 
       - name: Update App Settings
         uses: azure/appservice-settings@v1
